--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<video autoplay loop>
+<video autoplay loop width="100%">
   <source src="https://github.com/yupferris/fuse-example-video-login-screen/raw/master/assets/nature.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
