--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <h2>Video Test</h2?
 <video autoplay loop width="100%">
   <source src="https://github.com/yupferris/fuse-example-video-login-screen/raw/master/assets/nature.mp4" type="video/mp4">
 
