--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <h2>Video Test</h2>
-<video autoplay loop width="100%">
+<video autoplay loop controls width="100%">
   <source src="https://github.com/yupferris/fuse-example-video-login-screen/raw/master/assets/nature.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
